Change in about me section

--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #363636;
+  /* background-image: url("../src/components/cards/images/AdobeStock_284413962_Preview.jpeg");
+  background-repeat: repeat; */
 }
